--- a/css/history.css
+++ b/css/history.css
@@ -30,10 +30,11 @@
     padding-left: 25px;
     padding-right: 10px;
     line-height: 50px;
-    box-shadow: 0px 2px 4px #615e5e;
+    box-shadow: 2px 0px 5px black;
     background-color: #c7c0c0;
     width: 420px;
     border-radius: 50px 0px 50px 0px;
+    text-align: center;
 }
 #history p{
     margin-top: 15px;
