--- a/css/stadiums.css
+++ b/css/stadiums.css
@@ -6,6 +6,19 @@
     flex-direction: column;
     align-items: center;
 }
+.main h2{
+    margin: 20px 0 30px;
+    height: 60px;
+    text-align: center;
+    width: 100%;
+    background: #444444;
+    color: white;
+    line-height: 60px;
+    padding-left: 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    box-shadow: 4px 4px 4px black;
+}
 .main .rows{
     display: flex;
 }
