--- a/css/leagues.css
+++ b/css/leagues.css
@@ -51,7 +51,7 @@
     text-decoration: underline;
 }
 
-p{
+.content-leagues p{
     text-align:justify;
     margin-top: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
