--- a/css/leagues.css
+++ b/css/leagues.css
@@ -27,7 +27,7 @@
     top: 0;
     background: #444444;
     margin-right: 20px;
-    height: 280px;
+    height: 320px;
     border-radius: 5px;
 }
 
@@ -35,13 +35,15 @@
     color: white;
     padding: 5px;
     margin-left: 35px;
-    
-    
 }
 .menu-leagues ol li{
-    height: 15px;
-    padding: 12px;
     transition: all 300ms;
+    margin-top: 5px;
+    padding: 3px;
+    border-radius: 5px;
+}
+.menu-leagues ol li:nth-of-type(2n){
+    background: #3f3e3e
 }
 .menu-leagues ol li a{
     color: white;
