--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,6 @@ header a:hover{
     .main{
         flex-direction: column-reverse;
         align-items: center; 
-
     }
     .ball-img{
         width: 280px;
@@ -58,6 +57,7 @@ header a:hover{
     animation-timing-function: linear;
     animation-duration: 3s;
     transform: translateX(0px);
+    /* background:url(img/soccerball.png); */
 }
 .lateral{
     width: 60%;
