--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,11 @@ body{
     .main-menu li{
         margin-bottom: 3px;
    }
+   /* ========================================================== */
+   #container .box2 img{
+        display: none;
+    }
+
 }
 
 @media only screen and (max-width: 780px) {
