--- a/css/index.css
+++ b/css/index.css
@@ -35,10 +35,11 @@ header a:hover{
 }
 
 /* Media Queries */
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 890px) {
     .main{
         flex-direction: column-reverse;
         align-items: center; 
+        margin-bottom: 120px;
     }
     .ball-img{
         width: 280px;
@@ -48,10 +49,9 @@ header a:hover{
     }
 }
 
-
 .ball-img img{
-    width: 70%;
-    padding-left: 10%;
+    width: 60%;
+    padding-left: 20%;
     transform: translateX(600px);
     animation: animate-ball;
     animation-timing-function: linear;
@@ -62,7 +62,7 @@ header a:hover{
 .lateral{
     width: 60%;
     margin-left: 10%;
-    height: 360px;
+    height: 250px;
     z-index: 3;
 }
 .lateral h1{
@@ -80,6 +80,29 @@ header a:hover{
     line-height: 1.8;
 }
 
+/* START */
+.start{
+    width: 80px;
+    height: 30px;
+    margin-left: 55%;
+    border-radius: 5px;
+    transition: all 360ms;
+    box-shadow: 0px 0px 4px rgb(150, 38, 116);
+}
+.start a{
+    font-size: 20px;
+    text-align: center;
+    margin-left: 8px;
+    line-height: 30px;
+    text-decoration: none;
+}
+.start:hover{
+    background: rgb(60, 5, 85);
+    border: 3px solid rgb(150, 38, 116);
+}
+.start:hover a{
+    color: rgb(150, 38, 116);
+}
 /* Footer */
 
 footer{
