--- a/css/stadiums.css
+++ b/css/stadiums.css
@@ -21,9 +21,35 @@
 }
 .main .rows{
     display: flex;
+    justify-content: space-between;
 }
 .main img{
     width: 98%;
     margin: 5px;
     border-radius: 4px;
+}
+
+
+/* Stadiums descriptions */
+
+.stadiums{
+    flex-basis: 50%;
+}
+.campnou{
+    height: 70.5%;
+}
+.stadiums-descrip{
+    width: 97%;
+    margin-left: 10px;
+}
+.stadiums-descrip h3{
+    margin-top: 10px;
+}
+.stadiums-descrip p{
+    width: 98%;
+    text-align:justify;
+    margin-top: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    line-height: 1.6;
 }
