--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body{
     margin: 0px;
-    padding:0px;
+    padding: 0px;
     color: white;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -11,7 +11,7 @@ header{
     margin-top: 10px;
     margin-right: 20px;
     text-align: right;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 }
 header a{
     padding-right: 20px;
@@ -25,31 +25,40 @@ header a:hover{
 }
 
 /*  MAIN */
-.main{
+/* .main{
     display: flex;
     margin-bottom: 30px;
 }
 
 .ball-img{
     flex-basis: 60%;
+} */
+.main{
+    width: 98%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0px auto;
+}
+.main .lateral{
+    width: 60%;
+    margin-left: 60px;
+}
+.main .ball-img{
+    width: 50%;
+    margin-left: 80px;
+}
+.main .ball-img img{
+    width: 50%;
+    transform: translateX(600px);
+    animation: animate-ball;
+    animation-timing-function: linear;
+    animation-duration: 3s;
+    transform: translateX(0px);
 }
 
-/* Media Queries */
-@media only screen and (max-width: 890px) {
-    .main{
-        flex-direction: column-reverse;
-        align-items: center; 
-        margin-bottom: 120px;
-    }
-    .ball-img{
-        width: 280px;
-    } 
-    .main .lateral h1{
-        font-size: 26px;
-    }
-}
 
-.ball-img img{
+/* .ball-img img{
     width: 60%;
     padding-left: 20%;
     transform: translateX(600px);
@@ -57,23 +66,23 @@ header a:hover{
     animation-timing-function: linear;
     animation-duration: 3s;
     transform: translateX(0px);
-    /* background:url(img/soccerball.png); */
-}
-.lateral{
+} */
+/* .lateral{
     width: 60%;
     margin-left: 10%;
     height: 250px;
     z-index: 3;
-}
+} */
 .lateral h1{
     font-size: 40px;
     text-transform: uppercase;
     animation: animate-ball;
     animation-timing-function: linear;
     animation-duration: 4s;
+    /* margin-bottom: 30px; */
 }
 .lateral p{
-    width: 90%;
+    width: 80%;
     margin-left: 20px;
     margin-top: 10px;
     text-align: justify;
@@ -82,9 +91,10 @@ header a:hover{
 
 /* START */
 .start{
+    margin-top: 100px;
     width: 80px;
     height: 30px;
-    margin-left: 55%;
+    margin-left: 47%;
     border-radius: 10px;
     transition: all 360ms;
     box-shadow: 0px 0px 4px rgb(150, 38, 116);
@@ -125,4 +135,19 @@ footer{
 }
 .footerline1 a:hover{
     text-decoration: underline; 
+}
+
+/* Media Queries */
+@media only screen and (max-width: 890px) {
+    .main{
+        flex-direction: column-reverse;
+        align-items: center; 
+        margin-bottom: 120px;
+    }
+    .ball-img{
+        width: 280px;
+    } 
+    .main .lateral h1{
+        font-size: 23px;
+    }
 }
