--- a/css/index.css
+++ b/css/index.css
@@ -128,10 +128,19 @@ footer{
         align-items: center; 
         margin-bottom: 120px;
     }
-    .ball-img{
-        width: 280px;
-    } 
+    .main .lateral{
+        width: 90%;
+        margin-left: 20px;
+    }
+    .main .ball-img{
+        width: 90%;
+        margin-left: 20px;
+    }
     .main .lateral h1{
         font-size: 23px;
     }
+    .main .ball-img img{
+        width: 200px;
+        margin-left: 20%;
+    } 
 }
