--- a/css/contactus.css
+++ b/css/contactus.css
@@ -7,40 +7,45 @@ body{
 }
 /* Header */
 header{
-    height: 80px;
+    height: 90px;
+    width: 100%;
+    position:fixed;
+    z-index: 5;
+    background: black;
+    display: flex;
 }
-header .img-h1{
-    width: 90%;
-    margin: 0 auto;
+header .header-img{
+    width: 100px;
+    flex-basis: 35%;
+    margin-left: 20px;
 }
-header .img-h1 img{
-    width: 75px;
-    float: left;
-    transform: translateY(-10px);
+header .header-img img{
+    padding-top: 5px;
+    width: 80px;
 }
-header .img-h1 h1{
+header .header-h1 h1{
     color: white;
     font-size: 40px;
     text-transform: uppercase;
-    line-height: 60px;
-    text-align: center;
+    line-height: 40px;
 }
 
 /* Banner */
 .banner {
-    /* height: 300px; */
-    height: auto;
+    height: 300px;
+    height: 450px;
     overflow: hidden;
     transition: all 300ms;
-    position: relative;
-}
+    position:relative;
+    
+} 
+
 .banner  img{
-    width: 100%;
+    width: 110%;
     filter: blur(2px);
-    transform: translateY(-50px);
+    transform: translateY(90px);
     opacity: 0.5;
     height: 100%;
-    margin-bottom: 0px;
 }
 .banner-body{
     width: 100%;
@@ -63,6 +68,7 @@ header .img-h1 h1{
     color: white;
     text-align: center;
 }
+
 /*  Formulario*/
 main{
     width: 100%;
@@ -114,7 +120,7 @@ main{
     color: white;
 }
 
-/* Footer line1/line2 */
+/* Footer */
 .footerline1,
 .footerline2{
     font-size: 14px;
@@ -135,4 +141,58 @@ main{
 }
 .footerline1 a:hover{
     text-decoration: underline; 
+}
+
+/* Web responsive */
+@media only screen and (max-width: 1000px) {
+    .banner  img{
+        width: 130%;
+    }
+    .banner-body h2{
+        margin-left: 30%;
+    } 
+    .form-box form input{
+        width: 90%;
+    }
+    .form-box form textarea{
+        width: 90%;
+    }
+
+    header .header-h1{
+        flex-basis: 100%;
+    }
+    header .header-h1 h1{
+        font-size: 35px;
+    }
+}
+@media only screen and (max-width: 720px) {
+    .banner  img{
+        width: 150%;
+    }
+    .banner-body h2{
+        margin-left: 30%;
+    } 
+    .form-box form input{
+        width: 100%;
+    }
+    .form-box form textarea{
+        width: 100%;
+    }
+    .banner-body h2{
+        font-size: 50px;
+    } 
+    header .header-h1 h1{
+        font-size: 30px;
+    }
+}
+@media only screen and (max-width: 550px) {
+    .banner{
+        display: none;
+    } 
+    header{
+        height: 180px;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
 }
