--- a/css/leagues.css
+++ b/css/leagues.css
@@ -25,7 +25,7 @@
     flex-basis: 50%;
     position: sticky;
     top: 0;
-    background: #444444;
+    background: #3b3a3a;
     margin-right: 20px;
     height: 320px;
     border-radius: 5px;
@@ -43,7 +43,7 @@
     border-radius: 5px;
 }
 .menu-leagues ol li:nth-of-type(2n){
-    background: #3f3e3e;
+    background: #444444;
 }
 .menu-leagues ol li a{
     color: white;
