--- a/css/styles.css
+++ b/css/styles.css
@@ -27,11 +27,9 @@ body{
     font-family: "WebSymbolRegular";
 }
 
-
 /* Header begins*/
 .main-header{
     height: 200px;
-    /* background: #70b231; */
     background: black;
     box-shadow: 0px 0px 6px #1a3104;
     display: flex;
@@ -69,7 +67,6 @@ body{
     padding: 5px;
     border-radius: 5px;
     line-height: 60px;
-
 }
 
 .main-header > .header-menu nav ul li{
@@ -102,9 +99,9 @@ body{
 
 .main-menu li{
     line-height: 40px;
-    background:#f1eeee;
+    background:#dad3d3;
     transition: all 300ms;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-top: 5px;
 }
 
@@ -114,9 +111,8 @@ body{
     padding-left: 20px;
     padding-right: 20px;
 }
-
 .main-menu li:hover{
-    box-shadow: 0px 0px 2px black inset;
+    box-shadow: 0px 0px 8px black inset;
 }
 
 @media only screen and (max-width: 1215px) {
@@ -135,7 +131,6 @@ body{
     .main img{
         width: 100%;
     }
-    
 }
 
 @media only screen and (max-width: 955px) {
@@ -245,7 +240,6 @@ body{
    .main-header > .header-menu ul li{
        line-height: 70px;
    }
-
 }
 
 /* Footer */
@@ -304,8 +298,6 @@ body{
     margin-left: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
-
-
 }
 .footer-followme {
     height: 230px; 
@@ -338,6 +330,7 @@ body{
 .copyline{
     border-top: 1px solid #eee;
 }
+
 /* Footer line1/line2 */
 .footerline1,
 .footerline2{
@@ -361,6 +354,5 @@ body{
     text-decoration: underline; 
 }
 
-/* HTMLs */
 
 
