--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ body{
         margin-left: 2%;
     }
 }
-/* Menu Leagues */
+
 @media only screen and (max-width: 710px) {
     .main-body{
         flex-direction: column;
@@ -212,6 +212,7 @@ body{
        font-size: 14px;
        line-height: 55px;
    }
+ 
 }
 
 @media only screen and (max-width: 552px) {
@@ -240,6 +241,9 @@ body{
    .main-header > .header-menu ul li{
        line-height: 70px;
    }
+   #football h2{
+    font-size: 18px;
+}
 }
 
 /* Footer */
@@ -273,13 +277,15 @@ body{
     font-size: 16px;
     margin-top: 20px;
 }
+
 .footer .footer-menu ul li a{
     text-decoration: none;
-    color: white;
+    color: rgb(207, 202, 202);
     transition: all 300ms;
 }
 .footer .footer-menu ul li a:hover{
-    padding-left: 15px;
+    color: white;
+    text-decoration: underline;
 }
 
 /* MAP */
