--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,7 @@ header a:hover{
 .main .ball-img{
     width: 50%;
     margin-left: 80px;
+
 }
 .main .ball-img img{
     width: 60%;
@@ -68,13 +69,13 @@ header a:hover{
 
 /* START */
 .start{
-    margin-top: 70px;
+    margin-top: 30px;
     width: 80px;
     height: 30px;
     margin-left: 47%;
     border-radius: 10px;
     transition: all 360ms;
-    box-shadow: 0px 0px 4px rgb(150, 38, 116);
+    box-shadow: 0px 0px 10px rgb(150, 38, 116);
 }
 .start a{
     font-size: 20px;
@@ -84,10 +85,10 @@ header a:hover{
     text-decoration: none;
 }
 .start:hover{
-    background: rgb(25, 1, 36);
+    background: rgb(43, 1, 65);
 }
 .start:hover a{
-    color: rgb(150, 38, 116);
+    color: rgb(209, 16, 151);
 }
 /* Footer */
 
@@ -115,15 +116,21 @@ footer{
 }
 
 /* Media Queries */ 
+@media only screen and (max-width: 1042px){
+    .main .lateral h1{
+        font-size: 35px;
+    }
+}
+
 @media only screen and (max-width: 890px) {
     .main{
         flex-direction: column-reverse;
         align-items: center; 
-        margin-bottom: 120px;
+        margin-bottom: 40px;
     }
     .main .lateral{
         width: 90%;
-        margin-left: 20px;
+        margin-left: 4%;
     }
     .main .ball-img{
         width: 90%;
@@ -136,4 +143,7 @@ footer{
         width: 200px;
         margin-left: 20%;
     } 
+    .start{
+        margin-left: 41%;
+    }
 }
