--- a/css/leagues.css
+++ b/css/leagues.css
@@ -30,7 +30,14 @@
     height: 320px;
     border-radius: 5px;
 }
-
+/* Jacob */
+/* :target {
+    display: block;
+    position: relative;
+    top: 60px; 
+    visibility: hidden;
+  } */
+  
 .menu-leagues ol{
     color: white;
     padding: 5px;
