--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,13 @@ body{
    }
    #football h2{
     font-size: 18px;
+    }
 }
+
+@media only screen and (max-width: 380px) {
+    .main-header > .header-h1 > h1{
+       font-size: 24px;
+   }
 }
 
 /* Footer */
